--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "pathankot-to-himachal-and-kasmir-taxi-services",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Pathankot to Himachal and Kashmir taxi services are basically oprate in north indi for taxi service, taxies are available for pathankot to kullu, Pathankot to Dharamshala, Pathankot to Kasm=hmir velly, Pathankot to Katra(shri mata vaisno devi) and lot of other north india tourism.",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -38,9 +38,10 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "gatsby-plugin-postcss": "^6.14.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "eslint": "^7.32.0",
+    "eslint-webpack-plugin": "^3.2.0",
+    "gatsby-plugin-eslint": "^4.0.2",
+    "gatsby-plugin-resolve-src": "^2.1.0",
+    "sass": "^1.55.0"
   }
 }
