--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,10 @@
       "paths": {
         "components/*": ["components/*"],
         "common/*": ["common/*"],
-        "data/*": ["data/*"]
+        "data/*": ["data/*"],
+        "images/*":["images/*"],
+        "_posts/*": ["_posts/*"],
+        "_vehicles/*": ["_vehicles/*"]
       }
   }
 }
