--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "decap-cms-app": "^3.4.0",
     "formik": "^2.2.9",
-    "gatsby": "^4.24.5",
-    "react": "^17.0.2",
+    "gatsby": "^5.14.1",
+    "gatsby-plugin-decap-cms": "^4.0.4",
+    "gatsby-source-filesystem": "^5.14.0",
+    "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.3.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-modal-video": "^1.2.10",
     "react-scroll": "^1.8.8",
     "react-slick": "^0.29.0",
