--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: "git-gateway"
-  branch: "main" # Branch to update (optional; defaults to master)
+  name: git-gateway
+  branch: main # Branch to update (optional; defaults to master)
 
 # These lines should *not* be indented
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
@@ -19,18 +19,4 @@ collections:
       - { label: "Featured Image", name: "thumbnail", widget: "image" }
       - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { name: "slug",  required: true, widget: "hidden" ,default: "{{year}}-{{month}}-{{day}}-{{slug}}"}
-
-collections:
-  - name: "vehicles" # Used in routes, e.g., /admin/collections/blog
-    label: "Vehicles" # Used in the UI
-    folder: "_vehicles/vehicle" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Category", name: "category", widget: "select", options: ['SUV','SIDAN','PASSANGER'] }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { name: slug, required: true, widget: 'hidden' ,default: "{{slug}}"}
+      - { name: slug, label: slug, required: true, widget: string ,value: "{{year}}-{{month}}-{{day}}-{{slug}}"}
