--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^5.14.1",
     "gatsby-plugin-decap-cms": "^4.0.4",
     "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
     "react": "^18.0.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.3.2",
