changes for backend.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,7 +19,7 @@ collections:
       - { label: "Featured Image", name: "thumbnail", widget: "image" }
       - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { name: "slug", required: true, widget: 'string',slugify: "{{title}}"}
+      - { label: "Slug", name: "slug", widget: "string", required: false, hint: "This will be auto-generated based on the title if left blank." }
 
 
   - name: "vehicles" # Used in routes, e.g., /admin/collections/blog
@@ -33,4 +33,4 @@ collections:
       - { label: "Category", name: "category", widget: "select", options: ['SUV','SIDAN','PASSANGER'] }
       - { label: "Featured Image", name: "thumbnail", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { name: "slug", required: true, widget: 'string',slugify: "{{title}}"}
+      - { label: "Slug", name: "slug", widget: "string", required: false, hint: "This will be auto-generated based on the title if left blank." }
