--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ public_folder: "/images/uploads"
 collections:
   - name: "blog"
     label: "Blog"
-    folder: "content/blog"
+    folder: ".src/_posts/blog"
     create: true
     slug: "{{slug}}"
     fields:
@@ -23,7 +23,7 @@ collections:
 
   - name: "vehicles"
     label: "Vehicles"
-    folder: "content/vehicles"
+    folder: "./src/vehicles/vehicle"
     create: true
     slug: "{{slug}}"
     fields:
