--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -18,7 +18,7 @@ collections:
       - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Thumbnail", name: "thumbnail", widget: "image" }
       - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Slug", name: "slug", widget: "hidden", required: true, default: "{{fields.title | slugify}}" }
+      - { label: "Slug", name: "slug", widget: "string", required: true, default: {{fields.title | slugify}} }
 
 
   - name: "vehicles"
@@ -31,6 +31,6 @@ collections:
       - { label: "Type", name: "type", widget: "string" }
       - { label: "Image", name: "image", widget: "image" }
       - { label: "Description", name: "description", widget: "markdown" }
-      - { label: "Slug", name: "slug", widget: "hidden", required: true, default: "{{fields.title | slugify}}" }
+      - { label: "Slug", name: "slug", widget: "string", required: true, default: {{fields.title | slugify}} }
 
       
