--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,7 +10,7 @@ public_folder: "/images/uploads"
 collections:
   - name: "blog"
     label: "Blog"
-    folder: ".src/_posts/blog"
+    folder: "./src/_posts/blog"
     create: true
     slug: "{{slug}}"
     fields:
