--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,6 +19,7 @@ collections:
     slug: "{{slug}}"
     fields:
       [{ label: "Title", name: "title", widget: "string" },
+      { label: "Description", name: "description", widget: "string" },
       { label: "Date", name: "date", widget: "datetime" },
       { label: "Thumbnail", name: "thumbnail", widget: "image" },
       { label: "Body", name: "body", widget: "markdown" }]
