--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,7 +14,7 @@ public_folder: "/images/uploads"
 collections:
   - name: "blog"
     label: "Blog"
-    folder: "./src/_posts/blog"
+    folder: "src/_posts/blog"
     create: true
     slug: "{{slug}}"
     fields:
@@ -27,7 +27,7 @@ collections:
 
   - name: "vehicles"
     label: "Vehicles"
-    folder: "./src/vehicles/vehicle"
+    folder: "src/vehicles/vehicle"
     create: true
     slug: "{{slug}}"
     fields:
