--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "gatsby": "^5.14.1",
     "gatsby-plugin-decap-cms": "^4.0.4",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-remark": "^6.14.0",
     "react": "^18.0.0",
